src/objects/acpl__Account_Planning__c.object
<CustomObject>
    <fields>
        <fullName>AccountBranch__c</fullName>
        <formula>HYPERLINK( acpl__participant_id__r.branch_id__c , acpl__participant_id__r.branch_id__r.Name , &quot;_self&quot;)</formula>
        <label>Oficina principal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountGroup__c</fullName>
        <formula>HYPERLINK(acpl__participant_id__r.ParentId,
acpl__participant_id__r.Parent.Name, &quot;_self&quot;)</formula>
        <label>Grupo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <formula>HYPERLINK(acpl__participant_id__r.OwnerId, 
										acpl__participant_id__r.Owner.FirstName &amp; &quot; &quot; &amp; acpl__participant_id__r.Owner.LastName, &quot;_self&quot;)</formula>
        <label>Gestor principal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ClientCode__c</fullName>
        <formula>acpl__participant_id__r.main_code_id__c</formula>
        <label>Código central</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Planning_Administration__c</fullName>
        <formula>IF( $Setup.AccountPlanning_Administration__c.Edit_Account_Planning__c || $Profile.Name == &apos;System Administrator&apos; || $Profile.Name == &quot;Migracion&quot; || $Profile.Name == &quot;Administrador del sistema&quot;, true, false)</formula>
        <label>Account Planning Administration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_RecordType__c</fullName>
        <formula>acpl__participant_id__r.RecordType.Name</formula>
        <label>Tipo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Estrategia de la compañía</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acpl__Group_has_PF__c</fullName>
        <label>Group has PF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__business_area_desc__c</fullName>
        <label>Required by (area)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Cross-border Head</fullName>
                    <isActive>false</isActive>
                    <label>Cross-border Head</label>
                </value>
                <value>
                    <fullName>GCC Local Head</fullName>
                    <isActive>false</isActive>
                    <label>GCC Local Head</label>
                </value>
                <value>
                    <fullName>GTB Head</fullName>
                    <isActive>false</isActive>
                    <label>GTB Head</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__country_id__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__external_reference_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Account Planning external id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>acpl__gf_account_planning_limit_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_account_planning_name__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Light</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_acct_plan_edit_event_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_bus_pl_guide_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidelines Business Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_comm_plan_guide_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidelines Commercial Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_indvi_lock_edit_ind_type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlock Account Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_launch_name__c</fullName>
        <label>Launch type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General period</fullName>
                </value>
                <value>
                    <fullName>Period by priority</fullName>
                </value>
                <value>
                    <fullName>Event driven</fullName>
                </value>
                <value>
                    <fullName>Automatic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_launch_period_desc__c</fullName>
        <description>Periodo de lanzamiento con el formato &quot;YY/YY&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Launch period</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_limit_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_prev_validated_ind_type__c</fullName>
        <label>Pre-validation required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_priority_type_name__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_public_ind_type__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Public Business Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_question_form_number__c</fullName>
        <label>Number of questions</label>
        <summaryForeignKey>acpl__AP_Question__c.acpl__gf_account_planning_id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_req_validation_ind_type__c</fullName>
        <label>Validation Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_status_type_name__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending Validation</fullName>
                </value>
                <value>
                    <fullName>Validated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_strat_anlys_guide_desc__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guidelines Strategic Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_substatus_type_name__c</fullName>
        <label>Sub-status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>acpl__gf_ap_status_type_name__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                    <default>true</default>
                    <label>Not started</label>
                </value>
                <value>
                    <fullName>AP team not invited</fullName>
                </value>
                <value>
                    <fullName>AP team invited</fullName>
                </value>
                <value>
                    <fullName>Pending pre-validation</fullName>
                </value>
                <value>
                    <fullName>Pre-validated</fullName>
                </value>
                <value>
                    <fullName>Pending review</fullName>
                </value>
                <value>
                    <fullName>Pending validation</fullName>
                </value>
                <value>
                    <fullName>In place</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_validated_ind_type__c</fullName>
        <formula>IF( TEXT(acpl__gf_ap_status_type_name__c) ==&apos;Validated&apos;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validated Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_validation_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_ap_validator_user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Validator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plannings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acpl__gf_counter_number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Planning Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acpl__gf_event_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>acpl__gf_mandatory_type__c</fullName>
        <label>Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>acpl__management_country_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country of Management</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acpl__month_number__c</fullName>
        <label>Frequency (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acpl__participant_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Plannings</relationshipLabel>
        <relationshipName>Account_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acpl__proposal_manager_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Banker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Account_Plannings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>segment_desc__c</fullName>
        <formula>acpl__participant_id__r.segment_desc__c</formula>
        <label>Segmento</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>validation_initial_date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Validación Inicial</label>
        <type>Date</type>
    </fields>
    <label>Account Planning</label>
    <listViews>
        <fullName>Account_Planning_Expired</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Planes de cuenta expirados</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Ejecutivos_de_Oficina</group>
            <group>Gerentes_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Planning_closed_next_month</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_limit_date__c</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>notEqual</operation>
            <value>In place,Expired</value>
        </filters>
        <label>Planes que cierran el proximo mes</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Ejecutivos_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Planning_closed_this_month</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_limit_date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>notEqual</operation>
            <value>In place,Expired</value>
        </filters>
        <label>Planes que cierran este mes</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Ejecutivos_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Planning_in_progress</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_status_type_name__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>notEqual</operation>
            <value>Expired</value>
        </filters>
        <label>Planes de cuenta en progreso</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Gerentes_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Planning_not_started</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_status_type_name__c</field>
            <operation>equals</operation>
            <value>Not started</value>
        </filters>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>equals</operation>
            <value>Not started</value>
        </filters>
        <label>Planes de cuenta no iniciados</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Gerentes_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Planning_pending_validation</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_status_type_name__c</field>
            <operation>equals</operation>
            <value>Pending Validation</value>
        </filters>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>equals</operation>
            <value>Pending validation</value>
        </filters>
        <label>Planes de cuenta pendiente de validación</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Gerentes_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Planning_validated</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>equals</operation>
            <value>In place</value>
        </filters>
        <filters>
            <field>acpl__gf_ap_status_type_name__c</field>
            <operation>equals</operation>
            <value>Validated</value>
        </filters>
        <label>Planes de cuenta validados</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Ejecutivos_de_Oficina</group>
            <group>Gerentes_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>acpl__All</fullName>
        <columns>NAME</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_substatus_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>acpl__Automatic</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_launch_name__c</field>
            <operation>equals</operation>
            <value>Automatic</value>
        </filters>
        <label>Automatically launched</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>acpl__Event_driven</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_launch_name__c</field>
            <operation>equals</operation>
            <value>Event drive</value>
        </filters>
        <label>Event driven</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>acpl__General_period</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>acpl__gf_mandatory_type__c</columns>
        <columns>acpl__gf_ap_validator_user_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_launch_name__c</field>
            <operation>equals</operation>
            <value>General period</value>
        </filters>
        <label>General period</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>acpl__Period_by_priority</fullName>
        <columns>NAME</columns>
        <columns>acpl__participant_id__c</columns>
        <columns>segment_desc__c</columns>
        <columns>acpl__gf_ap_status_type_name__c</columns>
        <columns>acpl__gf_ap_priority_type_name__c</columns>
        <columns>acpl__gf_ap_limit_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>acpl__gf_ap_launch_name__c</field>
            <operation>equals</operation>
            <value>Period by priority</value>
        </filters>
        <filters>
            <field>acpl__gf_ap_substatus_type_name__c</field>
            <operation>notEqual</operation>
            <value>Expired</value>
        </filters>
        <label>Por prioridad</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>Ejecutivos_de_Oficina</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>acpl__Questionnaire</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>acpl__Account_Planning__c.acpl__Question_Catalog</value>
        </filters>
        <label>Questionnaire</label>
        <sharedTo>
            <group>AP_Administration</group>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Planning Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plannings</pluralLabel>
    <recordTypes>
        <fullName>acpl__Account_Planning</fullName>
        <active>true</active>
        <label>Account Planning</label>
    </recordTypes>
    <recordTypes>
        <fullName>acpl__Question_Catalog</fullName>
        <active>true</active>
        <label>Question Catalog</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Change_Owner</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(OwnerId) &amp;&amp; 
NOT(
$Profile.Name == &apos;System Administrator&apos; || 
$Profile.Name == &quot;Migracion&quot; || 
$Profile.Name == &quot;Administrador del sistema&quot;)</errorConditionFormula>
        <errorMessage>No puede cambiar al propietario del plan de cuenta.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_Question_Catalog</fullName>
        <active>false</active>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Question_Catalog&apos; &amp;&amp;
ISNEW() &amp;&amp; 
NOT(
$Profile.Name == &apos;System Administrator&apos; ||
$Profile.Name == &quot;Migracion&quot; ||
$Profile.Name == &quot;Administrador del sistema&quot;)</errorConditionFormula>
        <errorMessage>No puede crear planes de cuenta de tipo Question Catalog</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName == &apos;Account_Planning&apos; &amp;&amp; 
(ISBLANK(acpl__proposal_manager_id__c) || ISBLANK(acpl__participant_id__c) || ISBLANK(acpl__gf_ap_limit_date__c))</errorConditionFormula>
        <errorMessage>Los campos cliente, fecha de vencimiento y gestor son obligatorios</errorMessage>
    </validationRules>
</CustomObject>